@@ -1,5 +1,6 @@
 Version 2.5
 -----------
+* new scripts added
 * update difxcopy
 
 Version 2.4
